Remove token. Dynamically request profile icon. Begin grid

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -25,7 +25,7 @@
 
         <!-- search bar -->
         <form action = "{% url 'summoner-home' %}"method="GET" class="input-group input-group-lg m-2">
-            {% csrf_token %}
+            <!-- {% csrf_token %} -->
             <input type="text" class="form-control" aria-label="Summoner Name" placeholder="Summoner Name" name="summoner_name">
             <div class="input-group-append">
                 <select class="browser-default custom-select custom-select-lg" aria-label="region" name="region">
