--- a/summoner/templates/summoner/home.html
+++ b/summoner/templates/summoner/home.html
@@ -1,11 +1,27 @@
 {% extends "home/base.html" %}
 {% load static %}
+{% load summoner_extras %}
+
 {% block contentEnd %}
     <h1>Summoner Home!</h1>
 
-    <h2>id: {{ summonerData.id }}</h2>
-    <p>accountId: {{ summonerData.accountId }} name: {{ summonerData.name }}</p>
-    <p>profileIconId: <img src="{% static "summoner/dragontail/9.3.1/img/profileicon/0.png" %}"><img> </p> 
+    <!-- Summoner Info -->
+    <div class="row">
+        <div class="col-md-3">
+            {% with 'summoner/dragontail/9.3.1/img/profileicon/'|addstr:summonerData.profileIconId|addstr:'.png' as profileIconUrl %}
+                <img src="{% static profileIconUrl %}"><img> 
+            {% endwith %}
+        </div>
+        <div class="col-md-3">
+            <div class="row">
+                <div class="col">
+                    <h2>{{ summonerData.name }}</h2>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    
     {% for match in matches %}
         <p>{{ match }}</p>
         <p>{{ match.champion }}</p>
