--- a/summoner/templates/summoner/home.html
+++ b/summoner/templates/summoner/home.html
@@ -3,29 +3,59 @@
 {% load summoner_extras %}
 
 {% block contentEnd %}
-    <h1>Summoner Home!</h1>
-
-    <!-- Summoner Info -->
-    <div class="row">
-        <div class="col-md-3">
+    
+    <div class="row border border-primary">
+        <!-- Summoner Info -->
+        <div class="col-sm-3 border-danger">
             {% with 'summoner/dragontail/9.3.1/img/profileicon/'|addstr:summonerData.profileIconId|addstr:'.png' as profileIconUrl %}
-                <img src="{% static profileIconUrl %}"><img> 
+                <img src="{% static profileIconUrl %}" class="img-fluid"><img> 
             {% endwith %}
         </div>
-        <div class="col-md-3">
-            <div class="row">
+        <div class="col-sm-3 text-center border border-danger">
+            <div class="row border border-warning">
                 <div class="col">
-                    <h2>{{ summonerData.name }}</h2>
+                    <p>{{ summonerData.name }}</p>
+                </div>
+            </div>
+            <div class="row border border-warning">
+                <div class="col">
+                    <p>Level: {{ summonerData.summonerLevel }}</p>
                 </div>
             </div>
         </div>
+        <!-- Match History -->
+        <div class="col-sm-6 border border-danger">
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+            <p>Sample match</p>
+
+            <!-- <div class="row">
+                <div class="col">
+                    
+                </div>
+                <p>Sample Info</p>
+            </div>
+            <div class="row">
+                <p>Sample Info</p>
+            </div>
+            <div class="row">
+                <p>Sample Info</p>
+            </div>
+            <div class="row">
+                <p>Sample Info</p>
+            </div>
+            <div class="row">
+                <p>Sample Info</p>
+            </div>
+        </div> -->
 
     </div>
     
-    {% for match in matches %}
-        <p>{{ match }}</p>
-        <p>{{ match.champion }}</p>
-        <p>{{ match.role }}</p>
-    {% endfor %}
 
 {% endblock contentEnd %}
