Add SQL table matching champ ids to name.

--- a/summoner/templates/summoner/home.html
+++ b/summoner/templates/summoner/home.html
@@ -68,11 +68,13 @@
             {% for match in matches %}
                 <div class="row">
                     <div class="col border border-dark">
-                        {% with champion_ids|getattr:'75'|getattr:'name' as champ_name %}
-                            {% with 'summoner/dragontail/9.3.1/img/champion/'|addstr:champ_name|addstr:'.png' as  championIconUrl %}
-                                <img src="{% static championIconUrl %}"></img>
+                        {% with champion_ids|getattr:'1' as champ_id_obj %}
+                            {% with champ_id_obj.name as champ_name %}
+                                {% with 'summoner/dragontail/9.3.1/img/champion/'|addstr:champ_name|addstr:'.png' as  championIconUrl %}
+                                    <img src="{% static championIconUrl %}"></img>
+                                {% endwith %}
+                                    <p>{{ champ_name }}</p>
                             {% endwith %}
-                                <p>{{ champ_name }}</p>
                         {% endwith %}
                         
                     </div>
